vendor/wasm-bindgen-macro-0.2.73/ui-tests/traits-not-implemented.stderr
error[E0277]: the trait bound `A: IntoWasmAbi` is not satisfied
 --> $DIR/traits-not-implemented.rs:8:12
  |
8 |     pub fn foo(a: A);
  |            ^^^ the trait `IntoWasmAbi` is not implemented for `A`
